--- a/online-fashion-shop-frontend/src/app/components/product-list/product-list.component-copy.html
+++ b/online-fashion-shop-frontend/src/app/components/product-list/product-list.component-copy.html
@@ -1,7 +1,3 @@
-<!--p *ngFor="let prod of products">
-    {{prod.name}} : {{prod.unitPrice | currency:'INR'}}
-</p--> 
-
 <div class="container">
     <!-- <h1 style="margin-left:0px;">Category : {{currentCategoryName}}</h1> -->
     <div class="row align-items-center ">
@@ -24,7 +20,7 @@
                         </div>
                         <div class="row">
                             <button (click)="addToCart(prod)" class="btn button">
-                                <i class="fa-solid fa-cart-plus" style="color:white"></i>
+                                <i class="fa fa-solid fa-cart-plus" style="color:white"></i>
                             </button>
                         </div>
                     </div>
@@ -36,38 +32,3 @@
         No Products found :(
     </div> 
 </div>
-<!-- Product list -->
-<!--     
-<div class="container">
-    <div class = "card">
-        <h3 class="text-center ">Product List</h3>
-        <div class = "card-body">
-            <table class="table table-striped">
-                <thead> 
-                    <th>Id</th>
-                    <th>Image</th>
-                    <th>Product</th>
-                    <th>Description</th>
-                    <th>Image Url</th>
-                    <th>Unit Price</th>
-                    <th>Units In Stock</th>
-                    <th>Category Id</th>
-                </thead>
-                <tbody>
-                    <tr *ngFor = "let prod of products">
-                         <td class="align-middle">{{prod.id}}</td>
-                        <td class="align-middle">
-                            <img src="{{prod.imageUrl}}"/>
-                        </td>
-                        <td class="align-middle"><h4 class="align-top">{{prod.name}}</h4><h6 class="align-bottom">{{prod.description}}</h6></td>
-                        <td>{{prod.description}}</td>
-                        <td>{{prod.imageUrl}}</td>
-                        <td class="align-middle">{{prod.unitPrice | currency:'INR'}}</td>
-                        <td class="align-middle">{{prod.unitsInStock}}</td>
-                        <td>{{prod.categoryId}}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div> -->
