--- a/online-fashion-shop-frontend/src/app/components/shop/shop.component.html
+++ b/online-fashion-shop-frontend/src/app/components/shop/shop.component.html
@@ -5,8 +5,18 @@
     </div>
     <div class="col-sm-9 clearstyle">
         <div class="smart-grid-layout">
-
+            <!-- <div class="row">
+                <div class="col-sm-4">D</div>
+                <div class="col-sm-4">E</div>
+                <div class="col-sm-4">F</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">O</div>
+                <div class="col-sm-4">P</div>
+                <div class="col-sm-4">Q</div>
+            </div> -->
             <br><br><br><br><br><br>
+            <!-- <app-product-list></app-product-list> -->
             <router-outlet></router-outlet>
         </div>
     </div> 
