--- a/online-fashion-shop-frontend/src/app/components/product-list/product-list.component.html
+++ b/online-fashion-shop-frontend/src/app/components/product-list/product-list.component.html
@@ -1,38 +1,33 @@
-<!--p *ngFor="let prod of products">
-    {{prod.name}} : {{prod.unitPrice | currency:'INR'}}
-</p--> 
-
 <div class="container">
-    <div class = "card">
-        <h3 class="text-center ">Product List</h3>
-        <div class = "card-body">
-            <table class="table table-striped">
-                <thead> 
-                    <th>Id</th>
-                    <th>Image</th>
-                    <th>Product</th>
-                    <!-- <th>Description</th> -->
-                    <!-- <th>Image Url</th> -->
-                    <th>Unit Price</th>
-                    <th>Units In Stock</th>
-                    <!-- <th>Category Id</th> -->
-                </thead>
-                <tbody>
-                    <tr *ngFor = "let prod of products">
-                         <td class="align-middle">{{prod.id}}</td>
-                        <td class="align-middle">
-                            <img src="{{prod.imageUrl}}" height=100/>
-                        </td>
-                        <td class="align-middle"><h4 class="align-top">{{prod.name}}</h4><h6 class="align-bottom">{{prod.description}}</h6></td>
-                        <!-- <td>{{prod.description}}</td>
-                        <td>{{prod.imageUrl}}</td> -->
-                        <td class="align-middle">{{prod.unitPrice | currency:'INR'}}</td>
-                        <td class="align-middle">{{prod.unitsInStock}}</td>
-                        <!-- <td>{{prod.categoryId}}</td> -->
-                    </tr>
-                </tbody>
-            </table>
+    <div class="row align-items-center ">
+        <div class="card justify-content-center" id="box" style="width: 15rem; margin:5px;" *ngFor="let prod of products">
+            <a routerLink="/shop/products/{{prod.id}}">
+                <img class="card-img-top" src="{{prod.imageUrl}}" alt="Card image cap">
+            </a>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-sm-7">
+                        <h5 class="card-title">
+                            <a routerLink="/shop/products/{{prod.id}}">{{prod.name}}</a>
+                        </h5>
+                    </div>
+                    <div class="col-sm-5">
+                        <div class="row">
+                            <h4 class="justify-text-center" style="font-size:16px;">
+                                Rs. {{prod.unitPrice}}
+                            </h4>
+                        </div>
+                        <div class="row">
+                            <button (click)="addToCart(prod)" class="btn button">
+                                <i class="fa-solid fa-cart-plus" style="color:white"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>  
         </div>
     </div>
+    <div *ngIf="products?.length==0" class="alert alert-warning col-sm-12" role="alert">
+        No Products found :(
+    </div> 
 </div>
-
