--- a/online-fashion-shop-frontend/src/app/components/login/login.component.css
+++ b/online-fashion-shop-frontend/src/app/components/login/login.component.css
@@ -39,7 +39,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(https://i.pinimg.com/736x/5d/73/ea/5d73eaabb25e3805de1f8cdea7df4a42--tumblr-backgrounds-iphone-phone-wallpapers-iphone-wallaper-tumblr.jpg);
-    overflow: hidden
+    /* overflow: hidden */
+    width: 80%;
   }
   
   .box-form .left .overlay {
@@ -47,7 +48,7 @@
     width: 100%;
     height: 100%;
     background: #5961f9ad;
-    overflow: hidden;
+    /* overflow: hidden; */
     box-sizing: border-box
   }
   
@@ -81,7 +82,8 @@
   
   .box-form .right {
     padding: 40px;
-    overflow: hidden
+    /* overflow: hidden */
+    width: 40%;
   }
   
   @media(max-width:980px) {
